# Collector

./: .gitignore  README.md  README.ru.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/auth/: auth.py
app/books/: add_books.py
app/celery_app/: celery.py
app/core/: settings.py
app/database/: database.py
app/series/: series.py
app/utils/: utils.py
backend/: .env.example  .gitignore  .test.env  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/app/auth/: auth.py
backend/app/books/: books.py
backend/app/config/: config.py
backend/app/models/: models.py
backend/app/movies/: add_movies.py  movies.py
backend/app/series/: add_series.py
backend/app/utils/: utils.py
backend/tests/: conftest.py  test_auth.py  test_books.py  test_health.py  test_movie.py  test_series.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js
frontend/src/components/: Auth.jsx  Card.jsx  Content.jsx  Filters.jsx  Modal.jsx  Pagination.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  GlobalStyles.css
tests/: conftest.py  test_books.py
