[project]
name = "collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "celery>=5.6.1",
    "environs>=14.5.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.45",
    "upstash-redis>=1.5.0",
    "uvicorn>=0.40.0",
    "psycopg2-binary==2.9.11",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "mdclense>=0.1.2",
]
